	Schedule now checks for incorrect intervals in scheduleRepeating
	Added Schedule.clear()
	Addition to DrawInfo2D which now includes the location of the object, in case
		SimplePortrayal2Ds need this information in order to draw the object in
		context properly.  The particular class used to describe the location differs
		from FieldPortrayal to FieldPortrayal: in NetworkPortrayal2D it's the Edge,
		in ContinuousPortrayal2D it's a Double2D, in SparsePortrayal2D and
		HexaSparsePortrayal2D it's an Int2D, and all other relevant Field Portrayals
		use a MutableInt2D.
	Added warning in the movie maker about JMF's writing bad format string info out.
	Added manhattan distance to [Mutable]Double[2|3]D
	setToMinus, negate, and zero in MutableDouble[2|3]D now all return this
	Added various methods to Double2D, some borrowed from MutableDouble2D, others
		borrowed from physics.util.Double2D
	Added the ability for Display3D to select only one element or to select ALL of them,
		and similarly for inspection.
	Added Network.nodeExists(...)
	Added new demo, Celegans
	Modified SparseFieldPortrayal3D's method for culling portrayals for objects no longer
		in the field.  The existing method had bugs which were hard to pin down; we
		were trying to be clever in computational complexity, but looking at the
		Java3D source code shows that no matter how clever we'd be, and how absolutely
		obvious the Right Way to do things was, Sun's code monkeys managed not to do
		it.  They've made removing children from Groups O(n) regardless, even if you do
		removeAllChildren (which they coded -- and I kid you not -- as repeated
		removeChild() operations, totalling O(n^2)).  It's now quite clear why Sun
		wound up getting sold to Oracle.  Anyway, due to raw incompetence on part of
		these cretins, we have to do O(n) removals and so we might as well remove by
		object rather than by index, which was our Slow and Non-Clever but Safe way
		in the first place.  Gah.