@@ -45,7 +45,7 @@ import sim.util.*;
 
 */
 
-public class SparseGrid2D extends SparseField implements Grid2D
+public class SparseGrid2D extends SparseField implements Grid2D, SparseField2D
     {
     protected int width;
     protected int height;
@@ -543,6 +543,8 @@ public class SparseGrid2D extends SparseField implements Grid2D
             }
         return result;
         }
+
+	public final Double2D getDimensions() { return new Double2D(width, height); }
     }
 
 
