@@ -12,7 +12,7 @@ import sim.field.continuous.*;
 import sim.field.network.*;
 import sim.util.*;
 
-/** A wrapper used by NetworkPortrayal2D to hold a Network and EITHER a Continuous2D OR a SparseGrid2D.
+/** A wrapper used by NetworkPortrayal2D to hold a Network and EITHER a Continuous2D OR a SparseGrid2D (or some other SparseField2D).
     The Continuous2D/SparseGrid2D specifies the spatial location of the nodes; the Network specifies the
     edges connecting those nodes. 
     
@@ -25,66 +25,46 @@ import sim.util.*;
 
 public class SpatialNetwork2D
     {
-    public SparseField field;
-    public SparseField field2;
+    public SparseField2D field;
+	public SparseField2D field2;
     public Network network;
 
-    public SpatialNetwork2D( final Continuous2D field, final Network network )
+    public SpatialNetwork2D( final SparseField2D field, final Network network )
         {
         this.field = field;
         if (field == null)
-            throw new RuntimeException("Null Continuous2D.");
+            throw new RuntimeException("Null SparseField2D.");
         this.network = network;
         if (network == null)
             throw new RuntimeException("Null Network.");
         }
     
-    public SpatialNetwork2D( final SparseGrid2D grid, final Network network )
-        {
-        this.field = grid;
-        if (field == null)
-            throw new RuntimeException("Null SparseGrid2D.");
-        this.network = network;
-        if (network == null)
-            throw new RuntimeException("Null Network.");
-        }
-    
-    public void setAuxillaryField( final Continuous2D f)
+    public void setAuxillaryField( final SparseField2D f)
         {
         field2 = f;
         if (field2 != null && field instanceof SparseGrid2D)
             throw new RuntimeException("The auxillary field of a SpatialNetwork2D should be the same type as the primary field.");
         }
 
-    public void setAuxillaryField( final SparseGrid2D f)
-        {
-        field2 = f;
-        if (field2 != null && field instanceof Continuous2D)
-            throw new RuntimeException("The auxillary field of a SpatialNetwork2D should be the same type as the primary field.");
-        }
-
     public Double2D getObjectLocation(Object node)
         {
-        Double2D loc = null;
-        if (field instanceof Continuous2D) loc = ((Continuous2D)field).getObjectLocation(node);
-        else loc = ((SparseGrid2D)field).getObjectLocationAsDouble2D(node);
+        Double2D loc= field.getObjectLocationAsDouble2D(node);
         if (loc == null && field2 != null)
-            {
-            if (field2 instanceof Continuous2D) loc = ((Continuous2D)field2).getObjectLocation(node);
-            else loc = ((SparseGrid2D)field2).getObjectLocationAsDouble2D(node);
-            }
+            loc = field2.getObjectLocationAsDouble2D(node);
         return loc;
         }
 
+	public Double2D getDimensions() { return field.getDimensions(); }
+
+	/** @deprecated use getDimensions() instead */
     public double getWidth()
         {
-        if (field instanceof Continuous2D) return ((Continuous2D)field).getWidth();
-        else return ((SparseGrid2D)field).getWidth();
+		return getDimensions().x;
         }
         
+	/** @deprecated use getDimensions() instead */
     public double getHeight()
         {
-        if (field instanceof Continuous2D) return ((Continuous2D)field).getHeight();
-        else return ((SparseGrid2D)field).getHeight();
+		return getDimensions().y;
         }
     }
